# routers/blogRouter.js
@@ -4,7 +4,7 @@ import {
   getAllBlogs,
   getBlogById,
   findBlogByTitleOrDescription,
-} from '../controllers/studentController.js'
+} from '../controllers/blogController.js'
 
 export const blogRouter = express.Router();
       /********* Blog COntroller *********************
@@ -18,7 +18,7 @@ export const blogRouter = express.Router();
 
 
 // Handles the POST for a blog
-blogRouter.post('create-blog', createBlog);
+blogRouter.post('/create-blog', createBlog);
 // Handles the GET for all blogs
 blogRouter.get('/get-blogs', getAllBlogs);
 // Handles the GET for a spiecific blog given a valid ID
